<resources>
    <string name="app_name">Parsing Tool</string>
    <string name="checkbox_save_database">Save to Database</string>
    <string name="button_import_data">Import Data!</string>
    <string name="convert_to_json">Convert to JSON</string>
    <string name="convert_to_csv">Convert to CSV</string>
    <string name="parsing_tool">Parsing Tool</string>
    <string name="save_to_file">Save to File</string>
    <string name="edit_text_file_name_hint">Insert File Name</string>
    <string name="database">Database!</string>
    <string name="reload">Reload</string>
    <string name="view_database">View Database!</string>
    <string name="reload_data">Reload Data!</string>
    <string name="last_minute_for_finishing_code">last minute: For finishing code</string>
</resources>