<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_title"
        android:layout_width="375dp"
        android:layout_height="80dp"
        android:layout_marginTop="60dp"
        android:text="@string/parsing_tool"
        android:textSize="56sp"
        app:cardBackgroundColor="#91F3F0"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/parsing_tool"
            android:textSize="56sp"
            app:cardForegroundColor="#91F3F0" />

    </androidx.cardview.widget.CardView>


    <EditText
        android:id="@+id/edit_text_file_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="#85CBF1"
        android:backgroundTintMode="screen"
        android:hint="@string/edit_text_file_name_hint"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/checkbox_file"
        app:layout_constraintEnd_toEndOf="@id/card_view_title"
        app:layout_constraintStart_toStartOf="@id/card_view_title" />

    <CheckBox
        android:id="@+id/checkbox_file"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="300dp"
        android:text="@string/save_to_file"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkbox_database"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="@string/checkbox_save_database"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkbox_file" />

    <CheckBox
        android:id="@+id/checkbox_json"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:text="@string/convert_to_json"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkbox_database" />

    <CheckBox
        android:id="@+id/checkbox_csv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:text="@string/convert_to_csv"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkbox_json" />

    <Button
        android:id="@+id/button_import_data"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="150dp"
        android:backgroundTint="#63D6D6"
        android:padding="16dp"
        android:text="@string/button_import_data"
        android:textColor="#252525"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkbox_csv" />

    <Button
        android:id="@+id/button_view_database"
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#63D6D6"
        android:padding="16dp"
        android:text="@string/view_database"
        android:textColor="#252525"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_reload_data"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_import_data" />

    <Button
        android:id="@+id/button_reload_data"
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#63D6D6"
        android:padding="16dp"
        android:text="@string/reload_data"
        android:textColor="#252525"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_view_database"
        app:layout_constraintTop_toBottomOf="@id/button_import_data" />


</androidx.constraintlayout.widget.ConstraintLayout>
